--- a/serverless.yml
+++ b/serverless.yml
@@ -1,29 +1,12 @@
-# Welcome to Serverless!
-#
-# This file is the main config file for your service.
-# It's very minimal at this point and uses default values.
-# You can always add more config options for more control.
-# We've included some commented out config examples here.
-# Just uncomment any of them to get that config option.
-#
-# For full config options, check the docs:
-#    docs.serverless.com
-#
-# Happy Coding!
-
 service: serverless-restAPI # NOTE: update this with your service name
-
-# You can pin your service to only deploy with a specific Serverless version
-# Check out our docs for more details
-# frameworkVersion: "=X.X.X"
-
 provider:
   name: aws
   runtime: nodejs8.10
-
-# you can overwrite defaults here
-#  stage: dev
-#  region: us-east-1
+  stage: dev
+  region: us-east-1
+  timeout: 300
+  apiKeys:
+    - todoAPI
 
 # you can add statements to the Lambda function's IAM Role here
 #  iamRoleStatements:
@@ -46,10 +29,10 @@ provider:
 #    variable1: value1
 
 # you can add packaging information here
-#package:
-#  include:
-#    - include-me.js
-#    - include-me-dir/**
+package:
+ include:
+   - features/**
+   - models/**
 #  exclude:
 #    - exclude-me.js
 #    - exclude-me-dir/**
@@ -62,12 +45,19 @@ functions:
       - http:
           path: todo
           method: get #use command `sls offline start` to start a localhost route
+  listTodos:
+    handler: features/read.listTodos
+    events:
+      - http:
+          path: todos
+          method: get 
   createTodo:
     handler: features/create.createTodo
     events:
       - http:
           path: todo
-          method: post #use command `sls offline start` to start a localhost route
+          method: post 
+          private: true
           
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
