--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
   "license": "MIT",
   "devDependencies": {
     "serverless-offline": "^3.31.3"
+  },
+  "dependencies": {
+    "pg": "^7.6.1",
+    "sequelize": "^4.41.2"
   }
 }
